workloads/dev/test-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-nodejs-demo
  namespace: dev
  labels:
    app: docker-nodejs-demo
  annotations:
    fluxcd.io/automated: "true"
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: docker-nodejs-demo
  template:
    metadata:
      labels:
        app: docker-nodejs-demo
    spec:
      containers:
      - name: docker-nodejs-demo
        image: wardviaene/docker-nodejs-demo:1.0.1
        ports:
        - name: nodejs-port
          containerPort: 3000
