workloads/dev/test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: dev
  annotations:
    fluxcd.io/automated: "true"
spec:
  containers:
  - name: test-pod
    image: nginx
