workloads/dev/pgsql-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: pgsql
  labels:
    app: service
  annotations:
    fluxcd.io/automated: "true"
spec:
  ports:
    - port: 5432
  selector:
    app: service
    tier: pgsql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgsql
  labels:
    app: service
  annotations:
    fluxcd.io/automated: "true"
spec:
  selector:
    matchLabels:
      app: service
      tier: pgsql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: service
        tier: pgsql
    spec:
      containers:
      - image: postgres:12-alpine
        name: pgsql
        ports:
        - containerPort: 5432
          name: pgsql
        volumeMounts:
        - name: pgsql-persistent-storage
          mountPath: /var/lib/pgsql
      volumes:
      - name: pgsql-persistent-storage
        persistentVolumeClaim:
          claimName: pgsql-pv-claim
